--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ server.port = 9001
 server.forward-headers-strategy=framework 
 # database connectivity 
 # mysql connectivity
-Spring.datasource
+Spring.datasource.url=jdbc:mysql://localhost:3306/sample?createDatabaseIfNotExist=true
+Spring.datasource.username=root
+Spring.datasource.password=
 
 
