--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,11 @@ server.forward-headers-strategy=framework
 # mysql connectivity
 Spring.datasource.url=jdbc:mysql://localhost:3306/sample?createDatabaseIfNotExist=true
 Spring.datasource.username=root
-Spring.datasource.password=
-
+Spring.datasource.password=Amypo
+Spring.datasource.driver-class=com.mysql.cj.jdbc.Driver
+#Hibernate Connectivity
+Spring.jpa.hibernate.ddl.auto=update
+Spring.jpa.show-sql=true
+Spring.jpa.properties.hibernate.format_sql=true
+Spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
