--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ server.port = 9001
 server.forward-headers-strategy=framework 
 # database connectivity 
 # mysql connectivity
-Spring.datasource.url=jdbc:mysql://localhost:3306/sample?createDatabaseIfNotExist=true
-Spring.datasource.username=root
-Spring.datasource.password=Amypo
-Spring.datasource.driver-class=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/sample?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Hibernate Connectivity
-Spring.jpa.hibernate.ddl.auto=update
-Spring.jpa.show-sql=true
-Spring.jpa.properties.hibernate.format_sql=true
-Spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
